--- a/css/properties-editor.css
+++ b/css/properties-editor.css
@@ -1,24 +1,63 @@
 html, body {
-  height:100%;
   margin:0;
-  width:100%;
 }
 body {
-  margin:0;
-  padding:0;
+  margin: 0;
+  padding: 15px;
   font-family: sans-serif;
+  background-color: whitesmoke;
 }
 
 h1 {
   font-weight: bold;
-  display: inline-block;
-  white-space: normal;
-  word-wrap: break-word;
-  overflow: inherit;
   text-overflow: ellipsis;
   vertical-align: middle;
-  max-width: 90%;
-  max-height: 1em;
+  width: 100%;
+  margin: -15px 0 0 -15px;
+  padding: 15px;
+  background-color: lightsteelblue;
+  border-bottom: 1px solid black;
+}
+
+
+h2 {
+  width: 100%;
+  margin: 15px 0 15px -15px;
+  padding: 15px;
+  background-color: lightgray;
+  border-bottom: 1px solid black;
+}
+
+button {
+  border: 1px solid #777;
+  border-radius: 3px;
+  padding: 3px 8px;
+  margin: 2px;
+  background: #E4E4E4;
+  font-size: 13px;
+  text-align: center;
+}
+button:hover {
+  background: #C7E0F1;
+}
+button:active {
+  background: #B0CBDE;
+}
+
+input[type=text]{
+  font-size: 13px;
+}
+
+#tload td,
+#tsave td {
+  vertical-align: top;
+}
+.urlinput {
+  width: 300px;
+}
+
+#tprops input[type=text]{
+  width: 100%;
 }
 
 .hidden {
@@ -35,4 +74,34 @@ h1 {
 }
 .status-error{
   color: red;
+}
+
+#tprops {
+  border-collapse: collapse;
+  background-color: rgb(204, 233, 145);
+  width: 100%;
+}
+#tprops td {
+  vertical-align: top;
+  border: 2px solid white;
+  padding: 10px;
+}
+#tprops td:first-child {
+  text-align: right;
+  width:1%;
+  white-space:nowrap;
+}
+#tprops td:nth-child(2) {
+  text-align: right;
+  width:1%;
+  white-space:nowrap;
+}
+#tprops td:nth-child(3) span {
+  color: grey;
+  font-size: 80%;
+  font-style: italic;
+}
+.disabled {
+  text-decoration: line-through;
+  color: gray;
 }
