--- a/css/properties-editor.css
+++ b/css/properties-editor.css
@@ -22,8 +22,8 @@ h1 {
 
 h2 {
   width: 100%;
-  margin: 15px 0 15px -15px;
-  padding: 15px;
+  margin: 10px 0 10px -15px;
+  padding: 5px;
   background-color: lightgray;
   border-bottom: 1px solid black;
 }
@@ -38,22 +38,48 @@ button {
   text-align: center;
 }
 button:hover {
-  background: #C7E0F1;
+  background-color: #c4e2a5;
 }
 button:active {
-  background: #B0CBDE;
+  background-color: #87ba43;
 }
 
 input[type=text]{
   font-size: 13px;
 }
 
-#tload td,
-#tsave td {
+#settings-div {
+  margin: 10px 0;
+}
+
+.fold {
+  color: #1992ca;
+}
+
+.fold:hover {
+  cursor: pointer;
+}
+
+.taction {
+  border-collapse: collapse;
+  background-color: rgb(224, 228, 216);
+  width: 100%;
+}
+.taction td {
   vertical-align: top;
+  border: 2px solid white;
+  padding: 10px;
+}
+.taction td:nth-child(1) {
+  text-align: right;
+  width:1%;
+  white-space:nowrap;
+}
+.taction input[type=text], #taction select {
+  margin: 0 10px 0 5px;
 }
 .urlinput {
-  width: 300px;
+  width: 50%;
 }
 
 #tprops input[type=text]{
@@ -100,6 +126,12 @@ input[type=text]{
   color: grey;
   font-size: 80%;
   font-style: italic;
+}
+#tprops input[type=text]{
+  width: 100%;
+}
+.centered {
+  text-align: center !important;
 }
 .disabled {
   text-decoration: line-through;
