--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?16370880');
-  src: url('../font/fontello.eot?16370880#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?16370880') format('woff2'),
-       url('../font/fontello.woff?16370880') format('woff'),
-       url('../font/fontello.ttf?16370880') format('truetype'),
-       url('../font/fontello.svg?16370880#fontello') format('svg');
+  src: url('../font/fontello.eot?44076747');
+  src: url('../font/fontello.eot?44076747#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?44076747') format('woff2'),
+       url('../font/fontello.woff?44076747') format('woff'),
+       url('../font/fontello.ttf?44076747') format('truetype'),
+       url('../font/fontello.svg?44076747#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?16370880#fontello') format('svg');
+    src: url('../font/fontello.svg?44076747#fontello') format('svg');
   }
 }
 */
@@ -69,11 +69,23 @@
 .icon-info-circled:before { content: '\e80b'; } /* '' */
 .icon-cancel:before { content: '\e80c'; } /* '' */
 .icon-search:before { content: '\e80d'; } /* '' */
+.icon-eye:before { content: '\e80e'; } /* '' */
+.icon-eye-off:before { content: '\e80f'; } /* '' */
+.icon-scissors:before { content: '\e810'; } /* '' */
+.icon-trash-empty:before { content: '\e811'; } /* '' */
+.icon-edit:before { content: '\e812'; } /* '' */
+.icon-arrows-cw:before { content: '\e813'; } /* '' */
+.icon-right-open:before { content: '\e814'; } /* '' */
+.icon-down-open:before { content: '\e815'; } /* '' */
 .icon-check-empty:before { content: '\f096'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
 .icon-download-cloud:before { content: '\f0ed'; } /* '' */
 .icon-upload-cloud:before { content: '\f0ee'; } /* '' */
 .icon-github:before { content: '\f113'; } /* '' */
 .icon-info:before { content: '\f129'; } /* '' */
+.icon-eraser:before { content: '\f12d'; } /* '' */
 .icon-shield:before { content: '\f132'; } /* '' */
 .icon-sliders:before { content: '\f1de'; } /* '' */
+.icon-share:before { content: '\f1e0'; } /* '' */
+.icon-trash:before { content: '\f1f8'; } /* '' */
+.icon-clone:before { content: '\f24d'; } /* '' */
