--- a/css/properties-editor.css
+++ b/css/properties-editor.css
@@ -43,14 +43,14 @@ button, input[type=file] {
 button:hover, input[type=file]:hover {
   background-color: #c4e2a5;
 }
-
+input[type=text], input[type=password] {
+  padding: 1px;
+  margin: 0;
+  font-size: 13px;
+}
 button:active {
   color: white;
   font-weight: bold;
-}
-
-input[type=text]{
-  font-size: 13px;
 }
 
 #settings-div {
@@ -79,9 +79,7 @@ input[type=text]{
   text-align: right;
   width:1%;
   white-space:nowrap;
-}
-.taction input[type=text], #taction select {
-  margin: 0 10px 0 5px;
+  padding-top: 13px;
 }
 .urlinput {
   width: 50%;
@@ -230,4 +228,7 @@ input[type="checkbox"]:checked {
 }
 .cleartext:before {
   content: '\e803';
+}
+.checkspan-checked, .checkspan-unchecked, #generate-password {
+  cursor: pointer;
 }
