Popups and mouse icon updates

--- a/css/properties-editor.css
+++ b/css/properties-editor.css
@@ -244,6 +244,11 @@ input[type="checkbox"]:checked {
 .cleartext:before {
   content: '\e803';
 }
-.checkspan-checked, .checkspan-unchecked, #generate-password {
+.checkspan-checked,
+.checkspan-unchecked,
+#generate-password,
+#pname-edit,
+#clear-editor,
+.encbut {
   cursor: pointer;
 }
