--- a/css/properties-editor.css
+++ b/css/properties-editor.css
@@ -40,7 +40,7 @@ button, #file-label {
   font-size: 13px;
   text-align: center;
 }
-button:hover,,
+button:hover,
 #file-labe:hover {
   background-color: #c4e2a5;
 }
