Use new clipboard copy API when available

--- a/css/properties-editor.css
+++ b/css/properties-editor.css
@@ -301,13 +301,9 @@ input[type="checkbox"]:checked {
 #copy-password,
 #pname-edit,
 #clear-editor,
+#share-url,
 .encbut {
   cursor: pointer;
-}
-#copied-password {
-  padding: 2px 0;
-  margin: 0;
-  text-align: center;
 }
 .title {
   font-style: italic;
