--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?44076747');
-  src: url('../font/fontello.eot?44076747#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?44076747') format('woff2'),
-       url('../font/fontello.woff?44076747') format('woff'),
-       url('../font/fontello.ttf?44076747') format('truetype'),
-       url('../font/fontello.svg?44076747#fontello') format('svg');
+  src: url('../font/fontello.eot?8261344');
+  src: url('../font/fontello.eot?8261344#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?8261344') format('woff2'),
+       url('../font/fontello.woff?8261344') format('woff'),
+       url('../font/fontello.ttf?8261344') format('truetype'),
+       url('../font/fontello.svg?8261344#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,77 +15,124 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?44076747#fontello') format('svg');
+    src: url('../font/fontello.svg?8261344#fontello') format('svg');
   }
 }
 */
- 
- [class^="icon-"]:before, [class*=" icon-"]:before {
+[class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
-  speak: none;
- 
+  speak: never;
+
   display: inline-block;
   text-decoration: inherit;
   width: 1em;
   margin-right: .2em;
   text-align: center;
   /* opacity: .8; */
- 
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
- 
+
   /* fix buttons height, for twitter bootstrap */
   line-height: 1em;
- 
+
   /* Animation center compensation - margins should be symmetric */
   /* remove if not needed */
   margin-left: .2em;
- 
+
   /* you can be more comfortable with increased icons size */
   /* font-size: 120%; */
- 
+
   /* Font smoothing. That was taken from TWBS */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- 
+
   /* Uncomment for 3D effect */
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
- 
-.icon-check:before { content: '\e800'; } /* '' */
-.icon-mail:before { content: '\e801'; } /* '' */
-.icon-lock-1:before { content: '\e802'; } /* '' */
-.icon-lock-open-1:before { content: '\e803'; } /* '' */
-.icon-download:before { content: '\e804'; } /* '' */
-.icon-upload:before { content: '\e805'; } /* '' */
-.icon-pencil:before { content: '\e806'; } /* '' */
-.icon-cog:before { content: '\e807'; } /* '' */
-.icon-attention:before { content: '\e808'; } /* '' */
-.icon-attention-circled:before { content: '\e809'; } /* '' */
-.icon-help-circled:before { content: '\e80a'; } /* '' */
-.icon-info-circled:before { content: '\e80b'; } /* '' */
-.icon-cancel:before { content: '\e80c'; } /* '' */
-.icon-search:before { content: '\e80d'; } /* '' */
-.icon-eye:before { content: '\e80e'; } /* '' */
-.icon-eye-off:before { content: '\e80f'; } /* '' */
-.icon-scissors:before { content: '\e810'; } /* '' */
-.icon-trash-empty:before { content: '\e811'; } /* '' */
-.icon-edit:before { content: '\e812'; } /* '' */
-.icon-arrows-cw:before { content: '\e813'; } /* '' */
-.icon-right-open:before { content: '\e814'; } /* '' */
-.icon-down-open:before { content: '\e815'; } /* '' */
+
+.icon-qrcode:before { content: '\e800'; } /* '' */
+.icon-check:before { content: '\e801'; } /* '' */
+.icon-download:before { content: '\e802'; } /* '' */
+.icon-upload:before { content: '\e803'; } /* '' */
+.icon-cog:before { content: '\e804'; } /* '' */
+.icon-help-circled:before { content: '\e805'; } /* '' */
+.icon-info-circled:before { content: '\e806'; } /* '' */
+.icon-pencil:before { content: '\e807'; } /* '' */
+.icon-down-open:before { content: '\e808'; } /* '' */
+.icon-right-open:before { content: '\e809'; } /* '' */
+.icon-arrows-cw:before { content: '\e80a'; } /* '' */
+.icon-down-dir:before { content: '\e80b'; } /* '' */
+.icon-right-dir:before { content: '\e80c'; } /* '' */
+.icon-eye:before { content: '\e80d'; } /* '' */
+.icon-eye-off:before { content: '\e80e'; } /* '' */
+.icon-scissors:before { content: '\e80f'; } /* '' */
+.icon-search:before { content: '\e810'; } /* '' */
+.icon-attention:before { content: '\e811'; } /* '' */
+.icon-cancel:before { content: '\e812'; } /* '' */
+.icon-ok:before { content: '\e813'; } /* '' */
+.icon-mail:before { content: '\e814'; } /* '' */
+.icon-lock:before { content: '\e815'; } /* '' */
+.icon-lock-open:before { content: '\e816'; } /* '' */
+.icon-trash-empty:before { content: '\e817'; } /* '' */
+.icon-attention-circled:before { content: '\e818'; } /* '' */
+.icon-doc:before { content: '\e819'; } /* '' */
+.icon-logout:before { content: '\e81a'; } /* '' */
+.icon-left-big:before { content: '\e81b'; } /* '' */
+.icon-up-big:before { content: '\e81c'; } /* '' */
+.icon-down-big:before { content: '\e81d'; } /* '' */
+.icon-right-big:before { content: '\e81e'; } /* '' */
+.icon-zoom-in:before { content: '\e81f'; } /* '' */
+.icon-user:before { content: '\e820'; } /* '' */
+.icon-plus:before { content: '\e821'; } /* '' */
+.icon-minus:before { content: '\e822'; } /* '' */
+.icon-home:before { content: '\e823'; } /* '' */
+.icon-edit:before { content: '\e824'; } /* '' */
+.icon-comment:before { content: '\e825'; } /* '' */
+.icon-bell:before { content: '\e826'; } /* '' */
+.icon-phone:before { content: '\e827'; } /* '' */
+.icon-wrench:before { content: '\e828'; } /* '' */
+.icon-cog-alt:before { content: '\e829'; } /* '' */
+.icon-th-list:before { content: '\e82a'; } /* '' */
+.icon-key-1:before { content: '\e82c'; } /* '' */
+.icon-key-inv:before { content: '\e82d'; } /* '' */
+.icon-spin1:before { content: '\e830'; } /* '' */
+.icon-spin2:before { content: '\e831'; } /* '' */
+.icon-spin3:before { content: '\e832'; } /* '' */
+.icon-spin4:before { content: '\e834'; } /* '' */
+.icon-spin5:before { content: '\e838'; } /* '' */
+.icon-spin6:before { content: '\e839'; } /* '' */
+.icon-link-ext:before { content: '\f08e'; } /* '' */
 .icon-check-empty:before { content: '\f096'; } /* '' */
 .icon-github-circled:before { content: '\f09b'; } /* '' */
+.icon-beaker:before { content: '\f0c3'; } /* '' */
+.icon-comment-empty:before { content: '\f0e5'; } /* '' */
 .icon-download-cloud:before { content: '\f0ed'; } /* '' */
 .icon-upload-cloud:before { content: '\f0ee'; } /* '' */
-.icon-github:before { content: '\f113'; } /* '' */
+.icon-bell-alt:before { content: '\f0f3'; } /* '' */
+.icon-doc-text:before { content: '\f0f6'; } /* '' */
+.icon-reply:before { content: '\f112'; } /* '' */
+.icon-code:before { content: '\f121'; } /* '' */
+.icon-direction:before { content: '\f124'; } /* '' */
 .icon-info:before { content: '\f129'; } /* '' */
+.icon-attention-alt:before { content: '\f12a'; } /* '' */
 .icon-eraser:before { content: '\f12d'; } /* '' */
 .icon-shield:before { content: '\f132'; } /* '' */
+.icon-paper-plane:before { content: '\f1d8'; } /* '' */
 .icon-sliders:before { content: '\f1de'; } /* '' */
 .icon-share:before { content: '\f1e0'; } /* '' */
+.icon-bell-off:before { content: '\f1f6'; } /* '' */
+.icon-bell-off-empty:before { content: '\f1f7'; } /* '' */
 .icon-trash:before { content: '\f1f8'; } /* '' */
+.icon-user-secret:before { content: '\f21b'; } /* '' */
+.icon-user-plus:before { content: '\f234'; } /* '' */
+.icon-user-times:before { content: '\f235'; } /* '' */
 .icon-clone:before { content: '\f24d'; } /* '' */
+.icon-question-circle-o:before { content: '\f29c'; } /* '' */
+.icon-address-card-o:before { content: '\f2bc'; } /* '' */
+.icon-user-circle:before { content: '\f2bd'; } /* '' */
+.icon-user-circle-o:before { content: '\f2be'; } /* '' */
+.icon-user-o:before { content: '\f2c0'; } /* '' */
