--- a/css/properties-editor.css
+++ b/css/properties-editor.css
@@ -354,6 +354,10 @@ input[type="checkbox"]:checked {
   user-select: none;
 }
 
+.icon-github-circled {
+  color: black;
+}
+
 /* for 480px or less */
 @media screen and (max-width: 480px) {
   h1 {
